# veriscaffold

./: .gitignore  CMakeLists.txt  Makefile  README.md  sourceme.sh  update_filelist.sh
lib/common/: handshake_conn_fi.sv  handshake_conn_fo.sv  handshake_if.sv  selector_if.sv  xbar_if.sv
sim/: CMakeLists.txt
sim/accumulator/: CMakeLists.txt  tb_accumulator.cpp  tb_accumulator_multi.cpp
sim/counter/: CMakeLists.txt  tb_counter.cpp
src/accumulator/: accumulator.sv  accumulator_core.sv  accumulator_multi.sv
src/counter/: .counter.sv.swp  counter.sv
src/hello_world/: .hello.sv.swp  hello.sv  hello_world.sv
test/: CMakeLists.txt
test/counter/: .CMakeLists.txt.swp  CMakeLists.txt  tb_counter.cpp  tb_counter_inst.cpp  test_counter_inst.cpp
test/hello_world/: .tb_counter_inst.cpp.swp  tb_hello.cpp  test_hello.cpp
tests/: CMakeLists.txt
tests/accumulator/: CMakeLists.txt  gtest_accumulator.cpp
tests/counter/: CMakeLists.txt  gtest_counter.cpp
tests/hello_world/: CMakeLists.txt  test_hello.cpp
